// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput allows passing a custom format 1`] = `
.pounce-8 {
  position: relative;
}

.pounce-6 {
  cursor: pointer;
}

.pounce-4 {
  background-color: transparent;
  min-height: 47px;
  border: 1px solid;
  border-radius: 4px;
  border-color: #3e516b;
  position: relative;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-4:hover {
  border-color: #0081c5;
}

.pounce-4:disabled,
.pounce-4:disabled:focus,
.pounce-4:disabled:hover,
.pounce-4[aria-disabled=true],
.pounce-4[aria-disabled=true]:focus,
.pounce-4[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

.pounce-4:focus-within {
  border-color: #0081c5;
}

.pounce-4:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-0 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  color: #f6f6f6;
  background-color: transparent;
  vertical-align: top;
  width: 100%;
  height: 100%;
  border: 0;
  position: relative;
  font-size: 0.875rem;
  font-weight: 500;
  pointer-events: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.pounce-0:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-0:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::placeholder {
  opacity: 0.4;
}

.pounce-0:disabled,
.pounce-0:disabled:focus,
.pounce-0:disabled:hover,
.pounce-0[aria-disabled=true],
.pounce-0[aria-disabled=true]:focus,
.pounce-0[aria-disabled=true]:hover {
  opacity: 1;
  pointer-events: none;
  cursor: default;
}

.pounce-0:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #f6f6f6;
  border-radius: 4px;
}

.pounce-0::-webkit-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0::-moz-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0:-ms-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0::placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-2 {
  padding-left: 16px;
  padding-right: 16px;
  color: #bdbdbd;
  top: 0;
  left: 0;
  position: absolute;
  font-size: 0.875rem;
  font-weight: 500;
  pointer-events: none;
  transform-origin: center left;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

<div>
  <div
    class="pounce-8 pounce-1"
  >
    <div
      class="pounce-6 pounce-1"
    >
      <div
        class="pounce-4 pounce-1"
      >
        <input
          aria-autocomplete="none"
          aria-invalid="false"
          aria-readonly="true"
          autocomplete="off"
          class="pounce-0 pounce-1"
          id="test"
          readonly=""
          tabindex="-1"
          type="text"
          value="11 Nov 2020 1 Su"
        />
        <label
          class="pounce-2 pounce-1"
          for="test"
        >
          test
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput allows selecting a date with time options 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, 25px, 0);
    -moz-transform: translate3d(0, 25px, 0);
    -ms-transform: translate3d(0, 25px, 0);
    transform: translate3d(0, 25px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}

.pounce-142 {
  position: relative;
}

.pounce-6 {
  cursor: pointer;
}

.pounce-4 {
  background-color: transparent;
  min-height: 47px;
  border: 1px solid;
  border-radius: 4px;
  border-color: #3e516b;
  position: relative;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-4:hover {
  border-color: #0081c5;
}

.pounce-4:disabled,
.pounce-4:disabled:focus,
.pounce-4:disabled:hover,
.pounce-4[aria-disabled=true],
.pounce-4[aria-disabled=true]:focus,
.pounce-4[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

.pounce-4:focus-within {
  border-color: #0081c5;
}

.pounce-4:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-0 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  color: #f6f6f6;
  background-color: transparent;
  vertical-align: top;
  width: 100%;
  height: 100%;
  border: 0;
  position: relative;
  font-size: 0.875rem;
  font-weight: 500;
  pointer-events: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.pounce-0:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-0:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::placeholder {
  opacity: 0.4;
}

.pounce-0:disabled,
.pounce-0:disabled:focus,
.pounce-0:disabled:hover,
.pounce-0[aria-disabled=true],
.pounce-0[aria-disabled=true]:focus,
.pounce-0[aria-disabled=true]:hover {
  opacity: 1;
  pointer-events: none;
  cursor: default;
}

.pounce-0:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #f6f6f6;
  border-radius: 4px;
}

.pounce-0::-webkit-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0::-moz-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0:-ms-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0::placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-2 {
  padding-left: 16px;
  padding-right: 16px;
  color: #bdbdbd;
  top: 0;
  left: 0;
  position: absolute;
  font-size: 0.875rem;
  font-weight: 500;
  pointer-events: none;
  transform-origin: center left;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-198 {
  will-change: opacity,transform;
  -webkit-animation: animation-0 300ms 0ms ease-in-out both;
  animation: animation-0 300ms 0ms ease-in-out both;
}

.pounce-194 {
  margin-top: 16px;
  padding: 24px;
  background-color: #23344e;
  border-radius: 4px;
  position: absolute;
  top: 0;
  z-index: 100;
}

.pounce-18 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.pounce-10 {
  padding: 4px;
  color: #f6f6f6;
  background-color: #0081c5;
  border-radius: 4px;
  border: 1px solid;
  border-color: #0081c5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  outline: none;
}

.pounce-10:hover {
  background-color: #0a8bcf;
  border-color: #0a8bcf;
}

.pounce-10:focus {
  background-color: #0a8bcf;
  border-color: #55d6ff;
}

.pounce-10:active,
.pounce-10[data-active=true] {
  background-color: #0077bb;
  border-color: #0077bb;
}

.pounce-10:disabled,
.pounce-10:disabled:focus,
.pounce-10:disabled:hover,
.pounce-10[aria-disabled=true],
.pounce-10[aria-disabled=true]:focus,
.pounce-10[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

.pounce-8 {
  color: currentColor;
  display: block;
  vertical-align: sub;
  width: 20px;
  height: 20px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.pounce-12 {
  font-size: 0.875rem;
  font-weight: 700;
}

.pounce-34 {
  margin-bottom: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #3e516b;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.pounce-20 {
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.pounce-132 {
  display: table-row-group;
}

.pounce-50 {
  -webkit-display: table-row;
  display: table-row;
}

.pounce-36 {
  display: table-cell;
  padding: 8px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  border-radius: 50%;
  cursor: default;
  pointer-events: none;
}

.pounce-36[aria-selected='true'],
.pounce-36[aria-selected='true']:hover {
  background-color: #0081c5;
}

.pounce-36:hover {
  background-color: #3e516b;
}

.pounce-48 {
  display: table-cell;
  padding: 8px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  border-radius: 50%;
}

.pounce-48[aria-selected='true'],
.pounce-48[aria-selected='true']:hover {
  background-color: #0081c5;
}

.pounce-48:hover {
  background-color: #3e516b;
}

.pounce-184 {
  margin-left: -24px;
  margin-right: -24px;
  margin-top: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid;
  border-color: #3e516b;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.pounce-190 {
  padding-top: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.pounce-186 {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-right: 12px;
  color: #f6f6f6;
  background-color: #716f6f;
  width: auto;
  border-radius: 4px;
  border: 1px solid;
  border-color: #716f6f;
  font-size: 0.938rem;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  outline: none;
}

.pounce-186:hover {
  background-color: #7b7979;
  border-color: #7b7979;
}

.pounce-186:focus {
  background-color: #7b7979;
  border-color: #c6c4c4;
}

.pounce-186:active,
.pounce-186[data-active=true] {
  background-color: #676565;
  border-color: #676565;
}

.pounce-186:disabled,
.pounce-186:disabled:focus,
.pounce-186:disabled:hover,
.pounce-186[aria-disabled=true],
.pounce-186[aria-disabled=true]:focus,
.pounce-186[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

.pounce-188 {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f6f6f6;
  background-color: #0081c5;
  width: auto;
  border-radius: 4px;
  border: 1px solid;
  border-color: #0081c5;
  font-size: 0.938rem;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  outline: none;
}

.pounce-188:hover {
  background-color: #0a8bcf;
  border-color: #0a8bcf;
}

.pounce-188:focus {
  background-color: #0a8bcf;
  border-color: #55d6ff;
}

.pounce-188:active,
.pounce-188[data-active=true] {
  background-color: #0077bb;
  border-color: #0077bb;
}

.pounce-188:disabled,
.pounce-188:disabled:focus,
.pounce-188:disabled:hover,
.pounce-188[aria-disabled=true],
.pounce-188[aria-disabled=true]:focus,
.pounce-188[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

.pounce-182 {
  padding: 12px;
  padding-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.pounce-134 {
  padding-left: 16px;
  padding-right: 32px;
  padding-top: 20px;
  padding-bottom: 8px;
  color: #f6f6f6;
  background-color: transparent;
  vertical-align: top;
  width: 100%;
  height: 100%;
  border: 0;
  position: relative;
  font-size: 0.875rem;
  font-weight: 500;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.pounce-134:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-134:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-134:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-134:focus::placeholder {
  opacity: 0.4;
}

.pounce-134:disabled,
.pounce-134:disabled:focus,
.pounce-134:disabled:hover,
.pounce-134[aria-disabled=true],
.pounce-134[aria-disabled=true]:focus,
.pounce-134[aria-disabled=true]:hover {
  opacity: 1;
  pointer-events: none;
  cursor: default;
}

.pounce-134:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #f6f6f6;
  border-radius: 4px;
}

.pounce-134::-webkit-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-134::-moz-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-134:-ms-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-134::placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-140 {
  margin-top: auto;
  margin-bottom: auto;
  color: currentColor;
  opacity: 1;
  display: inline-block;
  vertical-align: sub;
  width: 24px;
  height: 24px;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  pointer-events: none;
}

.pounce-164 {
  margin-left: 12px;
  margin-right: 12px;
}

<div>
  <div
    class="pounce-142 pounce-1"
  >
    <div
      class="pounce-6 pounce-1"
    >
      <div
        class="pounce-4 pounce-1"
      >
        <input
          aria-autocomplete="none"
          aria-invalid="false"
          aria-readonly="true"
          autocomplete="off"
          class="pounce-0 pounce-1"
          id="test"
          readonly=""
          tabindex="-1"
          type="text"
          value="11/01/2020"
        />
        <label
          class="pounce-2 pounce-1"
          for="test"
        >
          test
        </label>
      </div>
    </div>
    <div
      class="pounce-198 pounce-1"
    >
      <div
        class="pounce-142 pounce-1"
      >
        <div
          class="pounce-194 pounce-1"
        >
          <div
            class="pounce-18 pounce-1"
          >
            <button
              aria-label="Go to previous page"
              aria-pressed="false"
              class="pounce-10 pounce-1"
              type="button"
            >
              <svg
                class="pounce-8 pounce-1"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83L13.42 5.41L12 4L4 12L12 20L13.41 18.59L7.83 13H20V11Z"
                />
              </svg>
            </button>
            <h4
              class="pounce-12 pounce-1"
              tabindex="-1"
            >
              November 2020
            </h4>
            <button
              aria-label="Go to next page"
              aria-pressed="false"
              class="pounce-10 pounce-1"
              type="button"
            >
              <svg
                class="pounce-8 pounce-1"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4L10.59 5.41L16.17 11H4V13H16.17L10.59 18.59L12 20L20 12L12 4Z"
                />
              </svg>
            </button>
          </div>
          <div>
            <div
              class="pounce-34 pounce-1"
              role="row"
            >
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Monday"
                >
                  Mo
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Tuesday"
                >
                  Tu
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Wednesday"
                >
                  We
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Thurdsday"
                >
                  Th
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Friday"
                >
                  Fr
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Saturday"
                >
                  Sa
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Sunday"
                >
                  Su
                </abbr>
              </div>
            </div>
          </div>
          <div
            class="pounce-132 pounce-133"
          >
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="false"
                aria-label="Su Nov 01 2020"
                aria-selected="true"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                1
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 02 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                2
              </div>
              <div
                aria-disabled="false"
                aria-label="Tu Nov 03 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                3
              </div>
              <div
                aria-disabled="false"
                aria-label="We Nov 04 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                4
              </div>
              <div
                aria-disabled="false"
                aria-label="Th Nov 05 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                5
              </div>
              <div
                aria-disabled="false"
                aria-label="Fr Nov 06 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                6
              </div>
              <div
                aria-disabled="false"
                aria-label="Sa Nov 07 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                7
              </div>
              <div
                aria-disabled="false"
                aria-label="Su Nov 08 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                8
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 09 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                9
              </div>
              <div
                aria-disabled="false"
                aria-label="Tu Nov 10 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                10
              </div>
              <div
                aria-disabled="false"
                aria-label="We Nov 11 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                11
              </div>
              <div
                aria-disabled="false"
                aria-label="Th Nov 12 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                12
              </div>
              <div
                aria-disabled="false"
                aria-label="Fr Nov 13 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                13
              </div>
              <div
                aria-disabled="false"
                aria-label="Sa Nov 14 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                14
              </div>
              <div
                aria-disabled="false"
                aria-label="Su Nov 15 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                15
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 16 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                16
              </div>
              <div
                aria-disabled="false"
                aria-label="Tu Nov 17 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                17
              </div>
              <div
                aria-disabled="false"
                aria-label="We Nov 18 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                18
              </div>
              <div
                aria-disabled="false"
                aria-label="Th Nov 19 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                19
              </div>
              <div
                aria-disabled="false"
                aria-label="Fr Nov 20 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                20
              </div>
              <div
                aria-disabled="false"
                aria-label="Sa Nov 21 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                21
              </div>
              <div
                aria-disabled="false"
                aria-label="Su Nov 22 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                22
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 23 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                23
              </div>
              <div
                aria-disabled="false"
                aria-label="Tu Nov 24 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                24
              </div>
              <div
                aria-disabled="false"
                aria-label="We Nov 25 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                25
              </div>
              <div
                aria-disabled="false"
                aria-label="Th Nov 26 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                26
              </div>
              <div
                aria-disabled="false"
                aria-label="Fr Nov 27 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                27
              </div>
              <div
                aria-disabled="false"
                aria-label="Sa Nov 28 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                28
              </div>
              <div
                aria-disabled="false"
                aria-label="Su Nov 29 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                29
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 30 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                30
              </div>
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
            </div>
          </div>
          <div
            class="pounce-184 pounce-1"
          >
            <div
              class="pounce-182 pounce-1"
            >
              <div
                class="pounce-144 pounce-1"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-0-label"
                  class="pounce-142 pounce-1"
                  role="combobox"
                >
                  <div
                    class="pounce-142 pounce-1"
                  >
                    <div
                      aria-disabled="false"
                      class="pounce-4 pounce-1"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-disabled="false"
                        aria-invalid="false"
                        aria-labelledby="downshift-0-label"
                        aria-readonly="true"
                        autocomplete="off"
                        class="pounce-134 pounce-1"
                        id="downshift-0-input"
                        readonly=""
                        type="text"
                        value="01"
                      />
                      <label
                        class="pounce-2 pounce-1"
                        for="downshift-0-input"
                        id="downshift-0-label"
                      >
                        Hours
                      </label>
                    </div>
                    <svg
                      class="pounce-140 pounce-1"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10L12 15L17 10H7Z"
                      />
                    </svg>
                  </div>
                  <ul
                    aria-labelledby="downshift-0-label"
                    class="pounce-144 pounce-1"
                    id="downshift-0-menu"
                    role="listbox"
                  />
                </div>
              </div>
              <div
                class="pounce-164 pounce-1"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-1-label"
                  class="pounce-142 pounce-1"
                  role="combobox"
                >
                  <div
                    class="pounce-142 pounce-1"
                  >
                    <div
                      aria-disabled="false"
                      class="pounce-4 pounce-1"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-disabled="false"
                        aria-invalid="false"
                        aria-labelledby="downshift-1-label"
                        aria-readonly="true"
                        autocomplete="off"
                        class="pounce-134 pounce-1"
                        id="downshift-1-input"
                        readonly=""
                        type="text"
                        value="02"
                      />
                      <label
                        class="pounce-2 pounce-1"
                        for="downshift-1-input"
                        id="downshift-1-label"
                      >
                        Minutes
                      </label>
                    </div>
                    <svg
                      class="pounce-140 pounce-1"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10L12 15L17 10H7Z"
                      />
                    </svg>
                  </div>
                  <ul
                    aria-labelledby="downshift-1-label"
                    class="pounce-144 pounce-1"
                    id="downshift-1-menu"
                    role="listbox"
                  />
                </div>
              </div>
              <div
                class="pounce-144 pounce-1"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-2-label"
                  class="pounce-142 pounce-1"
                  role="combobox"
                >
                  <div
                    class="pounce-142 pounce-1"
                  >
                    <div
                      aria-disabled="false"
                      class="pounce-4 pounce-1"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-disabled="false"
                        aria-invalid="false"
                        aria-labelledby="downshift-2-label"
                        aria-readonly="true"
                        autocomplete="off"
                        class="pounce-134 pounce-1"
                        id="downshift-2-input"
                        readonly=""
                        type="text"
                        value="AM"
                      />
                      <label
                        class="pounce-2 pounce-1"
                        for="downshift-2-input"
                        id="downshift-2-label"
                      >
                        Period
                      </label>
                    </div>
                    <svg
                      class="pounce-140 pounce-1"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M7 10L12 15L17 10H7Z"
                      />
                    </svg>
                  </div>
                  <ul
                    aria-labelledby="downshift-2-label"
                    class="pounce-144 pounce-1"
                    id="downshift-2-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="pounce-184 pounce-1"
          >
            <div
              class="pounce-190 pounce-1"
            >
              <button
                class="pounce-186 pounce-1"
                type="button"
              >
                Cancel
              </button>
              <button
                class="pounce-188 pounce-1"
                type="button"
              >
                Apply
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput opens the month picker 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, 25px, 0);
    -moz-transform: translate3d(0, 25px, 0);
    -ms-transform: translate3d(0, 25px, 0);
    transform: translate3d(0, 25px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}

.pounce-144 {
  position: relative;
}

.pounce-6 {
  cursor: pointer;
}

.pounce-4 {
  background-color: transparent;
  min-height: 47px;
  border: 1px solid;
  border-radius: 4px;
  border-color: #3e516b;
  position: relative;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-4:hover {
  border-color: #0081c5;
}

.pounce-4:disabled,
.pounce-4:disabled:focus,
.pounce-4:disabled:hover,
.pounce-4[aria-disabled=true],
.pounce-4[aria-disabled=true]:focus,
.pounce-4[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

.pounce-4:focus-within {
  border-color: #0081c5;
}

.pounce-4:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-0 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  color: #f6f6f6;
  background-color: transparent;
  vertical-align: top;
  width: 100%;
  height: 100%;
  border: 0;
  position: relative;
  font-size: 0.875rem;
  font-weight: 500;
  pointer-events: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.pounce-0:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-0:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::placeholder {
  opacity: 0.4;
}

.pounce-0:disabled,
.pounce-0:disabled:focus,
.pounce-0:disabled:hover,
.pounce-0[aria-disabled=true],
.pounce-0[aria-disabled=true]:focus,
.pounce-0[aria-disabled=true]:hover {
  opacity: 1;
  pointer-events: none;
  cursor: default;
}

.pounce-0:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #f6f6f6;
  border-radius: 4px;
}

.pounce-0::-webkit-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0::-moz-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0:-ms-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0::placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-2 {
  padding-left: 16px;
  padding-right: 16px;
  color: #bdbdbd;
  top: 0;
  left: 0;
  position: absolute;
  font-size: 0.875rem;
  font-weight: 500;
  pointer-events: none;
  transform-origin: center left;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-146 {
  will-change: opacity,transform;
  -webkit-animation: animation-0 300ms 0ms ease-in-out both;
  animation: animation-0 300ms 0ms ease-in-out both;
}

.pounce-142 {
  margin-top: 16px;
  padding: 24px;
  background-color: #23344e;
  border-radius: 4px;
  position: absolute;
  top: 0;
  z-index: 100;
}

.pounce-18 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.pounce-10 {
  padding: 4px;
  color: #f6f6f6;
  background-color: #0081c5;
  border-radius: 4px;
  border: 1px solid;
  border-color: #0081c5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  outline: none;
}

.pounce-10:hover {
  background-color: #0a8bcf;
  border-color: #0a8bcf;
}

.pounce-10:focus {
  background-color: #0a8bcf;
  border-color: #55d6ff;
}

.pounce-10:active,
.pounce-10[data-active=true] {
  background-color: #0077bb;
  border-color: #0077bb;
}

.pounce-10:disabled,
.pounce-10:disabled:focus,
.pounce-10:disabled:hover,
.pounce-10[aria-disabled=true],
.pounce-10[aria-disabled=true]:focus,
.pounce-10[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

.pounce-8 {
  color: currentColor;
  display: block;
  vertical-align: sub;
  width: 20px;
  height: 20px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.pounce-12 {
  font-size: 0.875rem;
  font-weight: 700;
}

.pounce-34 {
  margin-bottom: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #3e516b;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.pounce-20 {
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.pounce-132 {
  display: table-row-group;
}

.pounce-50 {
  -webkit-display: table-row;
  display: table-row;
}

.pounce-36 {
  display: table-cell;
  padding: 8px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  border-radius: 50%;
  cursor: default;
  pointer-events: none;
}

.pounce-36[aria-selected='true'],
.pounce-36[aria-selected='true']:hover {
  background-color: #0081c5;
}

.pounce-36:hover {
  background-color: #3e516b;
}

.pounce-48 {
  display: table-cell;
  padding: 8px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  border-radius: 50%;
}

.pounce-48[aria-selected='true'],
.pounce-48[aria-selected='true']:hover {
  background-color: #0081c5;
}

.pounce-48:hover {
  background-color: #3e516b;
}

.pounce-140 {
  margin-left: -24px;
  margin-right: -24px;
  margin-top: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid;
  border-color: #3e516b;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.pounce-138 {
  padding-top: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.pounce-134 {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-right: 12px;
  color: #f6f6f6;
  background-color: #716f6f;
  width: auto;
  border-radius: 4px;
  border: 1px solid;
  border-color: #716f6f;
  font-size: 0.938rem;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  outline: none;
}

.pounce-134:hover {
  background-color: #7b7979;
  border-color: #7b7979;
}

.pounce-134:focus {
  background-color: #7b7979;
  border-color: #c6c4c4;
}

.pounce-134:active,
.pounce-134[data-active=true] {
  background-color: #676565;
  border-color: #676565;
}

.pounce-134:disabled,
.pounce-134:disabled:focus,
.pounce-134:disabled:hover,
.pounce-134[aria-disabled=true],
.pounce-134[aria-disabled=true]:focus,
.pounce-134[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

.pounce-136 {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f6f6f6;
  background-color: #0081c5;
  width: auto;
  border-radius: 4px;
  border: 1px solid;
  border-color: #0081c5;
  font-size: 0.938rem;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,background-color 100ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  outline: none;
}

.pounce-136:hover {
  background-color: #0a8bcf;
  border-color: #0a8bcf;
}

.pounce-136:focus {
  background-color: #0a8bcf;
  border-color: #55d6ff;
}

.pounce-136:active,
.pounce-136[data-active=true] {
  background-color: #0077bb;
  border-color: #0077bb;
}

.pounce-136:disabled,
.pounce-136:disabled:focus,
.pounce-136:disabled:hover,
.pounce-136[aria-disabled=true],
.pounce-136[aria-disabled=true]:focus,
.pounce-136[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

<div>
  <div
    class="pounce-144 pounce-1"
  >
    <div
      class="pounce-6 pounce-1"
    >
      <div
        class="pounce-4 pounce-1"
      >
        <input
          aria-autocomplete="none"
          aria-invalid="false"
          aria-readonly="true"
          autocomplete="off"
          class="pounce-0 pounce-1"
          id="test"
          readonly=""
          tabindex="-1"
          type="text"
          value="11/01/2020"
        />
        <label
          class="pounce-2 pounce-1"
          for="test"
        >
          test
        </label>
      </div>
    </div>
    <div
      class="pounce-146 pounce-1"
    >
      <div
        class="pounce-144 pounce-1"
      >
        <div
          class="pounce-142 pounce-1"
        >
          <div
            class="pounce-18 pounce-1"
          >
            <button
              aria-label="Go to previous page"
              aria-pressed="false"
              class="pounce-10 pounce-1"
              type="button"
            >
              <svg
                class="pounce-8 pounce-1"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83L13.42 5.41L12 4L4 12L12 20L13.41 18.59L7.83 13H20V11Z"
                />
              </svg>
            </button>
            <h4
              class="pounce-12 pounce-1"
              tabindex="-1"
            >
              November 2020
            </h4>
            <button
              aria-label="Go to next page"
              aria-pressed="false"
              class="pounce-10 pounce-1"
              type="button"
            >
              <svg
                class="pounce-8 pounce-1"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4L10.59 5.41L16.17 11H4V13H16.17L10.59 18.59L12 20L20 12L12 4Z"
                />
              </svg>
            </button>
          </div>
          <div>
            <div
              class="pounce-34 pounce-1"
              role="row"
            >
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Monday"
                >
                  Mo
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Tuesday"
                >
                  Tu
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Wednesday"
                >
                  We
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Thurdsday"
                >
                  Th
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Friday"
                >
                  Fr
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Saturday"
                >
                  Sa
                </abbr>
              </div>
              <div
                role="columnheader"
              >
                <abbr
                  class="pounce-20 pounce-21"
                  title="Sunday"
                >
                  Su
                </abbr>
              </div>
            </div>
          </div>
          <div
            class="pounce-132 pounce-133"
          >
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="false"
                aria-label="Su Nov 01 2020"
                aria-selected="true"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                1
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 02 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                2
              </div>
              <div
                aria-disabled="false"
                aria-label="Tu Nov 03 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                3
              </div>
              <div
                aria-disabled="false"
                aria-label="We Nov 04 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                4
              </div>
              <div
                aria-disabled="false"
                aria-label="Th Nov 05 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                5
              </div>
              <div
                aria-disabled="false"
                aria-label="Fr Nov 06 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                6
              </div>
              <div
                aria-disabled="false"
                aria-label="Sa Nov 07 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                7
              </div>
              <div
                aria-disabled="false"
                aria-label="Su Nov 08 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                8
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 09 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                9
              </div>
              <div
                aria-disabled="false"
                aria-label="Tu Nov 10 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                10
              </div>
              <div
                aria-disabled="false"
                aria-label="We Nov 11 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                11
              </div>
              <div
                aria-disabled="false"
                aria-label="Th Nov 12 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                12
              </div>
              <div
                aria-disabled="false"
                aria-label="Fr Nov 13 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                13
              </div>
              <div
                aria-disabled="false"
                aria-label="Sa Nov 14 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                14
              </div>
              <div
                aria-disabled="false"
                aria-label="Su Nov 15 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                15
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 16 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                16
              </div>
              <div
                aria-disabled="false"
                aria-label="Tu Nov 17 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                17
              </div>
              <div
                aria-disabled="false"
                aria-label="We Nov 18 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                18
              </div>
              <div
                aria-disabled="false"
                aria-label="Th Nov 19 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                19
              </div>
              <div
                aria-disabled="false"
                aria-label="Fr Nov 20 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                20
              </div>
              <div
                aria-disabled="false"
                aria-label="Sa Nov 21 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                21
              </div>
              <div
                aria-disabled="false"
                aria-label="Su Nov 22 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                22
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 23 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                23
              </div>
              <div
                aria-disabled="false"
                aria-label="Tu Nov 24 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                24
              </div>
              <div
                aria-disabled="false"
                aria-label="We Nov 25 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                25
              </div>
              <div
                aria-disabled="false"
                aria-label="Th Nov 26 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                26
              </div>
              <div
                aria-disabled="false"
                aria-label="Fr Nov 27 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                27
              </div>
              <div
                aria-disabled="false"
                aria-label="Sa Nov 28 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                28
              </div>
              <div
                aria-disabled="false"
                aria-label="Su Nov 29 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                29
              </div>
            </div>
            <div
              class="pounce-50 pounce-51"
            >
              <div
                aria-disabled="false"
                aria-label="Mo Nov 30 2020"
                aria-selected="false"
                class="pounce-48 pounce-49"
                role="gridcell"
              >
                30
              </div>
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
              <div
                aria-disabled="true"
                class="pounce-36 pounce-37"
              />
            </div>
          </div>
          <div
            class="pounce-140 pounce-1"
          >
            <div
              class="pounce-138 pounce-1"
            >
              <button
                class="pounce-134 pounce-1"
                type="button"
              >
                Cancel
              </button>
              <button
                class="pounce-136 pounce-1"
                type="button"
              >
                Apply
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders 1`] = `
.pounce-8 {
  position: relative;
}

.pounce-6 {
  cursor: pointer;
}

.pounce-4 {
  background-color: transparent;
  min-height: 47px;
  border: 1px solid;
  border-radius: 4px;
  border-color: #3e516b;
  position: relative;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-4:hover {
  border-color: #0081c5;
}

.pounce-4:disabled,
.pounce-4:disabled:focus,
.pounce-4:disabled:hover,
.pounce-4[aria-disabled=true],
.pounce-4[aria-disabled=true]:focus,
.pounce-4[aria-disabled=true]:hover {
  opacity: 0.3;
  pointer-events: none;
  cursor: default;
}

.pounce-4:focus-within {
  border-color: #0081c5;
}

.pounce-4:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-0 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  color: #f6f6f6;
  background-color: transparent;
  vertical-align: top;
  width: 100%;
  height: 100%;
  border: 0;
  position: relative;
  font-size: 0.875rem;
  font-weight: 500;
  pointer-events: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.pounce-0:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-0:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::placeholder {
  opacity: 0.4;
}

.pounce-0:disabled,
.pounce-0:disabled:focus,
.pounce-0:disabled:hover,
.pounce-0[aria-disabled=true],
.pounce-0[aria-disabled=true]:focus,
.pounce-0[aria-disabled=true]:hover {
  opacity: 1;
  pointer-events: none;
  cursor: default;
}

.pounce-0:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #f6f6f6;
  border-radius: 4px;
}

.pounce-0::-webkit-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0::-moz-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0:-ms-input-placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-0::placeholder {
  opacity: 0;
  color: #f6f6f6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

.pounce-2 {
  padding-left: 16px;
  padding-right: 16px;
  color: #bdbdbd;
  top: 0;
  left: 0;
  position: absolute;
  font-size: 0.875rem;
  font-weight: 500;
  pointer-events: none;
  transform-origin: center left;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}

<div>
  <div
    class="pounce-8 pounce-1"
  >
    <div
      class="pounce-6 pounce-1"
    >
      <div
        class="pounce-4 pounce-1"
      >
        <input
          aria-autocomplete="none"
          aria-invalid="false"
          aria-readonly="true"
          autocomplete="off"
          class="pounce-0 pounce-1"
          id="test"
          readonly=""
          tabindex="-1"
          type="text"
          value="11/01/2020"
        />
        <label
          class="pounce-2 pounce-1"
          for="test"
        >
          test
        </label>
      </div>
    </div>
  </div>
</div>
`;
